@@ -44,6 +44,8 @@ Version 1.3.13+svn:
    * made "Show lobby joins of friends only" the default preference
    * new menu option added to save replays manually
    * show damage statistics for the current turn in the statistics window
+   * opening the action menu in linger mode no longer crashes the game
+     (bug #10438)
  * WML engine:
    * new tag [text_input] for [message] (patch #921)
    * new tag [filter_vision] for Standard Unit Filter
